--- a/performance/bouncingcog.html
+++ b/performance/bouncingcog.html
@@ -29,41 +29,28 @@
     <h1>Webcharts Graph performance</h1>
 
     <ni-cartesian-graph id="graph1" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
-      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-10" maximum = "10" auto-scale="none"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-10" maximum = "10" auto-scale="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="Cog_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="Cog_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SecondXPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SecondYPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="Spiral1_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="Spiral1_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="ThirdXPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="ThirdYPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="Spiral2_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="Spiral2_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="FourthXPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="FourthYPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="Spiral3_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="Spiral3_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="FifthXPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="FifthYPlot"></ni-cartesian-axis>
-
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SixthXPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SixthYPlot"></ni-cartesian-axis>
-
-      <ni-cartesian-plot show label="Plot 1">
+      <ni-cartesian-plot show label="Plot 1" xaxis="Cog_XPlot" yaxis="Cog_YPlot">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#8888FF" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-      <ni-cartesian-plot show label="Plot 2" xaxis="SecondXPlot" yaxis="SecondYPlot">
-        <ni-cartesian-plot-renderer line-width="2" line-stroke="#88FF88" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
-      </ni-cartesian-plot>
-      <ni-cartesian-plot show label="Plot 3" xaxis="ThirdXPlot" yaxis="ThirdYPlot">
-        <ni-cartesian-plot-renderer line-width="2" line-stroke="#FF8888" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
-      </ni-cartesian-plot>
-
-      <ni-cartesian-plot show label="Plot 4" xaxis="FourthXPlot" yaxis="FourthYPlot">
+      <ni-cartesian-plot show label="Plot 2" xaxis="Spiral1_XPlot" yaxis="Spiral1_YPlot">
         <ni-cartesian-plot-renderer line-width="5" line-stroke="#FF8888"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-      <ni-cartesian-plot show label="Plot 5" xaxis="FifthXPlot" yaxis="FifthYPlot">
+      <ni-cartesian-plot show label="Plot 3" xaxis="Spiral2_XPlot" yaxis="Spiral2_YPlot">
         <ni-cartesian-plot-renderer line-width="5" line-stroke="#8080FF"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-      <ni-cartesian-plot show label="Plot 6" xaxis="SixthXPlot" yaxis="SixthYPlot">
+      <ni-cartesian-plot show label="Plot 4" xaxis="Spiral3_XPlot" yaxis="Spiral3_YPlot">
         <ni-cartesian-plot-renderer line-width="5" line-stroke="#80FF80"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
 
@@ -71,42 +58,41 @@
 
 
     <ni-cartesian-graph id="graph2" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
-      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-10" maximum = "10" auto-scale="none"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-10" maximum = "10" auto-scale="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="BigCog_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="BigCog_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SecondXPlot2"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SecondYPlot2"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SmallCog1_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SmallCog1_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="ThirdXPlot2"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="ThirdYPlot2"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SmallCog2_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SmallCog2_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="FourthXPlot2"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="FourthYPlot2"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SmallCog3_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SmallCog3_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="FifthXPlot2"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="FifthYPlot2"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SmallCog4_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SmallCog4_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SixthXPlot2"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="SixthYPlot2"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="ExternalCog_XPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-10" maximum = "10" auto-scale="none" axis-ref="ExternalCog_YPlot"></ni-cartesian-axis>
 
-      <ni-cartesian-plot show label="Plot 7">
+      <ni-cartesian-plot show label="Plot 1" xaxis="BigCog_XPlot" yaxis="BigCog_YPlot">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#8888FF" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-      <ni-cartesian-plot show label="Plot 8" xaxis="SecondXPlot2" yaxis="SecondYPlot2">
+      <ni-cartesian-plot show label="Plot 2" xaxis="SmallCog1_XPlot" yaxis="SmallCog1_YPlot">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#88FF88" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-      <ni-cartesian-plot show label="Plot 9" xaxis="ThirdXPlot2" yaxis="ThirdYPlot2">
+      <ni-cartesian-plot show label="Plot 3" xaxis="SmallCog2_XPlot" yaxis="SmallCog2_YPlot">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#FF8888" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-
-      <ni-cartesian-plot show label="Plot 10" xaxis="FourthXPlot2" yaxis="FourthYPlot2">
-        <ni-cartesian-plot-renderer line-width="5" line-stroke="#FF8888"></ni-cartesian-plot-renderer>
+      <ni-cartesian-plot show label="Plot 4" xaxis="SmallCog3_XPlot" yaxis="SmallCog3_YPlot">
+        <ni-cartesian-plot-renderer line-width="2" line-stroke="#88FF88" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-      <ni-cartesian-plot show label="Plot 11" xaxis="FifthXPlot2" yaxis="FifthYPlot2">
-        <ni-cartesian-plot-renderer line-width="5" line-stroke="#8080FF"></ni-cartesian-plot-renderer>
+      <ni-cartesian-plot show label="Plot 5" xaxis="SmallCog4_XPlot" yaxis="SmallCog4_YPlot">
+        <ni-cartesian-plot-renderer line-width="2" line-stroke="#FF8888" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-      <ni-cartesian-plot show label="Plot 12" xaxis="SixthXPlot2" yaxis="SixthYPlot2">
-        <ni-cartesian-plot-renderer line-width="5" line-stroke="#80FF80"></ni-cartesian-plot-renderer>
+      <ni-cartesian-plot show label="Plot 6" xaxis="ExternalCog_XPlot" yaxis="ExternalCog_YPlot">
+        <ni-cartesian-plot-renderer line-width="2" line-stroke="#FFFF88" area-base-line="infinity" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
 
     </ni-cartesian-graph>
