Renamed a and b fields to x and y. Set the zoom and pan to "none".

--- a/performance/bouncingcog.html
+++ b/performance/bouncingcog.html
@@ -29,17 +29,17 @@
     <h1>Webcharts Graph performance</h1>
 
     <ni-cartesian-graph id="graph1" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
-      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Cog_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Cog_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Cog_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Cog_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral1_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral1_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral1_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral1_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral2_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral2_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral2_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral2_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral3_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral3_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral3_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Spiral3_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
       <ni-cartesian-plot show label="Plot 1" xaxis="Cog_XPlot" yaxis="Cog_YPlot">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#8888FF" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
@@ -58,23 +58,23 @@
 
 
     <ni-cartesian-graph id="graph2" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
-      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="BigCog_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="BigCog_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="BigCog_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="BigCog_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog1_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog1_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog1_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog1_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog2_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog2_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog2_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog2_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog3_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog3_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog3_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog3_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog4_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog4_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog4_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog4_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
-      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="ExternalCog_XPlot"></ni-cartesian-axis>
-      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="ExternalCog_YPlot"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="ExternalCog_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="ExternalCog_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
       <ni-cartesian-plot show label="Plot 1" xaxis="BigCog_XPlot" yaxis="BigCog_YPlot">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#8888FF" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
