--- a/performance/bouncingcog.html
+++ b/performance/bouncingcog.html
@@ -53,7 +53,6 @@
       <ni-cartesian-plot show label="Plot 4" xaxis="Spiral3_XPlot" yaxis="Spiral3_YPlot">
         <ni-cartesian-plot-renderer line-width="5" line-stroke="#80FF80"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
-
     </ni-cartesian-graph>
 
 
@@ -92,9 +91,24 @@
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#FF4444" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
       <ni-cartesian-plot show label="Plot 6" xaxis="ExternalCog_XPlot" yaxis="ExternalCog_YPlot">
-        <ni-cartesian-plot-renderer line-width="2" line-stroke="#888844" area-base-line="infinity" area-fill="auto"></ni-cartesian-plot-renderer>
+        <ni-cartesian-plot-renderer line-width="2" line-stroke="#888844" area-base-line="zero" area-fill=""></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
+    </ni-cartesian-graph>
 
+
+    <ni-cartesian-graph id="graph3" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
+      <ni-cartesian-axis grid-lines label="X" axis-position="bottom" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="BigCog_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="left" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="BigCog_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
+
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog1_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog1_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
+
+      <ni-cartesian-plot show label="Plot 1" xaxis="BigCog_XPlot" yaxis="BigCog_YPlot">
+        <ni-cartesian-plot-renderer line-width="2" line-stroke="#8888FF" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
+      </ni-cartesian-plot>
+      <ni-cartesian-plot show label="Plot 2" xaxis="SmallCog1_XPlot" yaxis="SmallCog1_YPlot">
+        <ni-cartesian-plot-renderer line-width="2" line-stroke="#44FF44" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
+      </ni-cartesian-plot>
     </ni-cartesian-graph>
 
 
