--- a/performance/bouncingcog.html
+++ b/performance/bouncingcog.html
@@ -103,11 +103,17 @@
       <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog1_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
       <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="SmallCog1_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
 
+      <ni-cartesian-axis grid-lines label="X" axis-position="top" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Chain_XPlot" zoom="none" pan="none"></ni-cartesian-axis>
+      <ni-cartesian-axis grid-lines label="Y" axis-position="right" minimum = "-4" maximum = "4" auto-scale="none" axis-ref="Chain_YPlot" zoom="none" pan="none"></ni-cartesian-axis>
+
       <ni-cartesian-plot show label="Plot 1" xaxis="BigCog_XPlot" yaxis="BigCog_YPlot">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#8888FF" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
       <ni-cartesian-plot show label="Plot 2" xaxis="SmallCog1_XPlot" yaxis="SmallCog1_YPlot">
         <ni-cartesian-plot-renderer line-width="2" line-stroke="#44FF44" area-base-line="zero" area-fill="auto"></ni-cartesian-plot-renderer>
+      </ni-cartesian-plot>
+      <ni-cartesian-plot show label="Plot 3" xaxis="Chain_XPlot" yaxis="Chain_YPlot">
+        <ni-cartesian-plot-renderer line-width="3" line-stroke="#222244" area-base-line="zero" area-fill="" point-color="#AABBCC" point-size="4"></ni-cartesian-plot-renderer>
       </ni-cartesian-plot>
     </ni-cartesian-graph>
 
