Added a link to XY Graph examples to the main page.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <tr><td style="padding-left: 1em"><a href="examples/ligo.html">Large dataset: LIGO recording</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="examples/chart_demo.html">Waveform Generator</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="examples/intensity.html">Intensity</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="examples/bouncingcog.html">XY Graph</a></td></tr>
                 </tbody></table>
         </div>
         <div class="card">
