Removing the ni-control-id

--- a/examples/intensity.html
+++ b/examples/intensity.html
@@ -25,7 +25,7 @@
     <div id="page-wrap">
         <h1>Intensity graph</h1>
 
-        <ni-intensity-graph id="intensity1" ni-control-id="50">
+        <ni-intensity-graph id="intensity1">
           <ni-cartesian-axis id="horizontalAxis" show log-scale show-ticks show-minor-ticks show-tick-labels="all" grid-lines show-label label="Width" axis-position="bottom" minimum="1" maximum="1000" auto-scale='none'></ni-cartesian-axis>
           <ni-cartesian-axis id="verticalAxis" show log-scale show-ticks show-minor-ticks show-tick-labels="all" show-endpoints grid-lines show-label label="Height" axis-position="left"  minimum="1" maximum="1000" auto-scale='none'></ni-cartesian-axis>
           <ni-color-scale show show-tick-labels="endpoints" auto-scale="none" markers='[{"value":-3.14,"color":"rgba(255,255,255,0.25)"},{"value":0,"color":"rgba(0,0,0,1)"},{"value":3.14,"color":"rgba(255,255,255,0.25)"}]'></ni-color-scale>
