--- a/examples/chart_demo.html
+++ b/examples/chart_demo.html
@@ -53,14 +53,14 @@
     <div id="page-wrap">
         <h1>Waveform generator connected to a Chart</h1>
         <div id="chart div" style="position: relative;">
-            <ni-chart id="chart" ni-control-id="28" buffer-size="1000" value="[]">
+            <ni-chart id="chart" graph-ref="28" buffer-size="1000" value="[]">
                 <ni-cartesian-axis show label="Samples" show-label show-tick-labels="all" axis-position="bottom" auto-scale="sliding-window" minimum="0" maximum="1000" grid-lines show-ticks></ni-cartesian-axis>
                 <ni-cartesian-axis id="chartY" show show-ticks show-minor-ticks label="Amplitude" show-label axis-position="left" minimum="-10" maximum="10" auto-scale="none" grid-lines></ni-cartesian-axis>
                 <ni-cartesian-plot show label="Waveforms">
                     <ni-cartesian-plot-renderer line-width="1" line-stroke="#0087FF"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-chart>
-            <ni-graph-tools ni-control-id='38' binding-info='{"prop":"value","sync":true}' label-id='' graph-name='28'></ni-graph-tools>
+            <ni-graph-tools binding-info='{"prop":"value","sync":true}' label-id='' graph-name='28'></ni-graph-tools>
         </div>
 
         <table>
