--- a/examples/chart_demo.html
+++ b/examples/chart_demo.html
@@ -60,7 +60,7 @@
                     <ni-cartesian-plot-renderer line-width="1" line-stroke="#0087FF"></ni-cartesian-plot-renderer>
                 </ni-cartesian-plot>
             </ni-chart>
-            <ni-graph-tools binding-info='{"prop":"value","sync":true}' label-id='' graph-name='28'></ni-graph-tools>
+            <ni-graph-tools graph-name='28'></ni-graph-tools>
         </div>
 
         <table>
