--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <tr><td style="padding-left: 1em"><a href="examples/chart_demo.html">Waveform Generator</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="examples/intensity.html">Intensity</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="examples/bouncingcog.html">XY Graph</a></td></tr>
-                    <tr><td style="padding-left: 1em"><a href="examples/time-axes.html">Time axes</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="examples/heart-beat.html">Heart Beat</a></td></tr>
                 </tbody></table>
         </div>
         <div class="card">
