--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
             <img src="book.svg">
             <h2>Developer documentation</h2>
                 <table><tbody>
-                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts/docs/API.md#webcharts-reference">webcharts API</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts/docs/API.md#webcharts-reference">Webcharts API</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts/docs/styling.md#styling-the-webcharts">Styling webcharts with css</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts/CHANGELOG.md">Webcharts changelog</a></td></tr>
+                    <tr><td></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts-legends/docs/API.md#webcharts-legends-reference">Webcharts legends API</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts-legends/docs/styling.md#styling-webcharts-legends">Styling webcharts legends with css</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts-legends/CHANGELOG.md">Webcharts changelog</a></td></tr>
                 </tbody></table>
         </div>
     </div>
