--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <tr><td></td></tr>
                     <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts-legends/docs/API.md#webcharts-legends-reference">Webcharts legends API</a></td></tr>
                     <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts-legends/docs/styling.md#styling-webcharts-legends">Styling webcharts legends with css</a></td></tr>
-                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts-legends/CHANGELOG.md">Webcharts changelog</a></td></tr>
+                    <tr><td style="padding-left: 1em"><a href="https://github.com/ni-kismet/webcharts-drive-test/blob/master/node_modules/ni-webcharts-legends/CHANGELOG.md">Webcharts legends changelog</a></td></tr>
                 </tbody></table>
         </div>
     </div>
