Add random data for scatter_graph

--- a/performance/scatter_graph.html
+++ b/performance/scatter_graph.html
@@ -80,6 +80,12 @@
             <input type="radio" name="pointshape" value="ellipse" />ellipse<br />
             <input type="radio" name="pointshape" value="plus" />plus<br />
         </fieldset>
+
+        <fieldset id="data_form" style="display: inline-block;">
+            <legend>Random data</legend>
+            <input type="radio" name="randomdata" value="0" checked="checked"/> Off <br />
+            <input type="radio" name="randomdata" value="1" /> On <br />
+        </fieldset>
     </div>
 
     <div id="fps"></div>
