--- a/performance/scatter_graph.html
+++ b/performance/scatter_graph.html
@@ -82,9 +82,9 @@
         </fieldset>
 
         <fieldset id="data_form" style="display: inline-block;">
-            <legend>Random data</legend>
-            <input type="radio" name="randomdata" value="0" checked="checked"/> Off <br />
-            <input type="radio" name="randomdata" value="1" /> On <br />
+            <legend>Data type</legend>
+            <input type="radio" name="randomdata" value="0" checked="checked"/> Sequential <br />
+            <input type="radio" name="randomdata" value="1" /> Random <br />
         </fieldset>
     </div>
 
