--- a/performance/scatter_graph.html
+++ b/performance/scatter_graph.html
@@ -3,6 +3,7 @@
 <head>
     <title>Webcharts Graph performance test</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <link rel="import" href="../node_modules/ni-webcharts/dist/es5-minified/webcharts.min.html"/>
     <script type="text/javascript" src="../node_modules/webcomponents-lite/webcomponents-lite.js"></script>
 
