--- a/performance/scatter_graph.html
+++ b/performance/scatter_graph.html
@@ -3,7 +3,6 @@
 <head>
     <title>Webcharts Graph performance test</title>
     <link rel="stylesheet" href="../node_modules/ni-webcharts/styles/webchartsLight.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
     <link rel="import" href="../node_modules/ni-webcharts/dist/es5-minified/webcharts.min.html"/>
     <script type="text/javascript" src="../node_modules/webcomponents-lite/webcomponents-lite.js"></script>
 
@@ -28,7 +27,7 @@
 <body>
     <h1>Webcharts Graph performance</h1>
 
-    <ni-cartesian-graph id="graph1" value="[0, 10, 200, 3, 40, 500, 6, 70, 800]">
+    <ni-cartesian-graph id="graph1" value="[]">
       <ni-cartesian-axis show grid-lines label="Time" axis-position="bottom" ></ni-cartesian-axis>
       <ni-cartesian-axis show grid-lines label="Amplitude" axis-position="left" ></ni-cartesian-axis>
       <ni-cartesian-plot show label="Plot 1">
